--- a/index.html
+++ b/index.html
@@ -13,3 +13,12 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
+else if (!lastName)
+if else (!lastName) 
+if (oldEnough)
+console.log ('Welcome')
+
+else {
+console.log ('Must be old can not come in')
+} 
