--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Overview</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <h1>User App</h1>
-
-    <button id="gather-btn">Gather Info</button>
-    
+    <h1 id='key-output'>Enter - 13</h1>
     <script src="js/script.js"></script>
 </body>
 </html>
