--- a/index.html
+++ b/index.html
@@ -1,120 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Overview</title>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <title>JS Overview</title>
 </head>
-<body class="container">
-    <h1 class="text-center mt-5"> jQuery Note Taker App</h1>
-
-    <div class="d-flex justify-content-center my-4">
-        <button class="btn btn-primary btn-md px-5 ">Create Note</button>
-    </div>
-
-    <h3 class="text-center mt-5">Your Notes</h3>
-    <hr>
-    
-    <main class="row">
-        <article class="col-lg-3 col-sm-6 mb-4 mb-sm-0">
-            <h3>Note Title</h3>
-            <p>Note Description</p>
-            <p>6/28/24 12:43pm</p>
-        </article>
-
-        <article class="col-lg-3 col-sm-6 mb-4 mb-sm-0">
-            <h3>Note Title</h3>
-            <p>Note Description</p>
-            <p>6/28/24 12:43pm</p>
-        </article>
-
-        <article class="col-lg-3 col-sm-6 mb-4 mb-sm-0">
-            <h3>Note Title</h3>
-            <p>Note Description</p>
-            <p>6/28/24 12:43pm</p>
-        </article>
-
-        <article class="col-lg-3 col-sm-6 mb-4 mb-sm-0">
-            <h3>Note Title</h3>
-            <p>Note Description</p>
-            <p>6/28/24 12:43pm</p>
-        </article>
-
-        <article class="col-lg-3 col-sm-6 mb-4 mb-sm-0">
-            <h3>Note Title</h3>
-            <p>Note Description</p>
-            <p>6/28/24 12:43pm</p>
-        </article>
-
-        <section class="">
-
-        </section>
-
-    </main>    
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Open modal for @mdo</button>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@fat">Open modal for @fat</button>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Open modal for @getbootstrap</button>
-    <div class="modal fade show" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Create Note</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form>
-                <div class="mb-3">
-                    <label for="title-input" class="col-form-label">Title:</label>
-                    <input type="text" class="form-control" id="title-input">
-                </div>
-                <div class="mb-3">
-                    <label for="text-input" class="col-form-label">Text:</label>
-                    <textarea class="form-control" id="text-input"></textarea>
-                </div>
-                <div>
-                    <label for="date-input" class="col-form-label">Select a Date:</label>
-                    <input type="text" class="form-control" id="date-input">
-                </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary"id='save-note'>Save Note</button>
-            </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js" integrity="sha256-sw0iNNXmOJbQhYFuC9OF2kOlD5KQKe1y5lfBn4C9Sjg=" crossorigin="anonymous"></script>
+<body>
     <script src="js/script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-<!-- ul>li*5{Item $} an emit tag to create multiple li's --> 
-
-<!-- <main class="row">
-    <section class="col-xl-3 col-lg-4 col-md-6">
-        <h1>Left Section</h1>
-    </section>
-
-    <section class="col-xl-9 col-lg-8 col-md-6">
-        <h1>Right Section</h1>
-    </section>
-</main> -->
