finished server request

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <title>JS Overview</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="'container">
+    <input id="city-input"type="text" placeholder="Type a city name">
+    <button id="weather-btn">Get Weather Data</button>
+    
+    <div class="output"></div>
+        <h3>Please use the search feature</h3>
     <script src="js/script.js"></script>
 </body>
 </html>
