--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="'container">
-    <input id="city-input"type="text" placeholder="Type a city name">
-    <button id="weather-btn">Get Weather Data</button>
     
-    <div class="output"></div>
+    <select id="char-select">
+        <option value="people">People</option>
+        <option value="films">Films</option>
+        <option value="starships">Starships</option>
+        <option value="vehicles">Vehicles</option>
+        <option value="species">Species</option>
+        <option value="planets">Planets</option>
+    </select>
+    <button id="search-btn">Search</button>
+    <div class="output">
         <h3>Please use the search feature</h3>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
